Fix header - menu overlap

--- a/scss/collection/projects.scss
+++ b/scss/collection/projects.scss
@@ -39,7 +39,7 @@
    * CONTENT
    * * * * * * * * * * * * * * * */
   .max-width-content {
-    top: 80px;
+    top: 73px;
     position: relative;
     max-width: 300px;
     height: auto;
