--- a/scss/index/bespoke.scss
+++ b/scss/index/bespoke.scss
@@ -22,7 +22,7 @@
   $images-margintop: -80px;
   $images-margintop-mobile: 0;
 
-  margin-bottom: 65px;
+  padding-top: 80px;
 
   .content {
     top: 50px;
