--- a/scss/index/mobile-images-collection.scss
+++ b/scss/index/mobile-images-collection.scss
@@ -8,7 +8,7 @@
   $more-tag-width: 30px;
 
   .max-width-content {
-    top: 30px;
+    top: 60px;
   }
 
   .mobile-transition-only {
@@ -30,7 +30,7 @@
     @extend .background-contain;
 
     position: absolute;
-    top: 30px;
+    top: 60px;
     right: 28px;
 
     width: $more-tag-width;
